<package format="2">
  <name>scara_robot</name>
  <version>0.0.1</version>
  <description>SCARA robot description package</description>

  <maintainer email="manuel@example.com">Manuel Caipo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>rviz</depend>

</package>
