<package format="3">
  <name>scara_robot</name>
  <version>0.0.1</version>
  <description>SCARA robot URDF for ROS 2</description>

  <maintainer email="manuel@example.com">Manuel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
